Fixes #379 by introducing a CSS class with word-wrap: break-word; and max-width

--- a/threadfix-main/src/main/webapp/styles/main.css
+++ b/threadfix-main/src/main/webapp/styles/main.css
@@ -785,6 +785,11 @@ div.box-shadow {
 	margin-bottom:0;
 }
 
+.long-path-word-wrap {
+    word-wrap: break-word;
+    max-width: 300px;
+}
+
 .vuln-comment-word-wrap {
 	word-wrap: break-word;
 	max-width:700px;
